Melhorias na documentação Sphinx

--- a/_modules/NTLFlowLyzer/network_flow_analyzer.html
+++ b/_modules/NTLFlowLyzer/network_flow_analyzer.html
@@ -5,7 +5,7 @@
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="../../genindex.html"><link rel="search" title="Search" href="../../search.html">
 
     <!-- Generated with Sphinx 9.1.0 and Furo 2025.12.19 -->
-        <title>NTLFlowLyzer.network_flow_analyzer - Project name not set documentation</title>
+        <title>NTLFlowLyzer.network_flow_analyzer - SBRC26-SF documentation</title>
       <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=d111a655" />
     <link rel="stylesheet" type="text/css" href="../../_static/styles/furo.css?v=7bdb33bb" />
     <link rel="stylesheet" type="text/css" href="../../_static/graphviz.css?v=4ae1632d" />
@@ -161,7 +161,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="../../index.html"><div class="brand">Project name not set  documentation</div></a>
+      <a href="../../index.html"><div class="brand">SBRC26-SF  documentation</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -182,7 +182,7 @@
       
       <div class="sidebar-sticky"><a class="sidebar-brand" href="../../index.html">
   
-  <span class="sidebar-brand-text">Project name not set  documentation</span>
+  <span class="sidebar-brand-text">SBRC26-SF  documentation</span>
   
 </a><form class="sidebar-search-container" method="get" action="../../search.html" role="search">
   <input class="sidebar-search" placeholder="Search" name="q" aria-label="Search">
